# qdsp-simulator

./: .gitignore  README.md  pyproject.toml  run_sim.py  setup.py
examples/: basic_alu.asm  hazard_test.asm  hello_world.dspasm  loop_example.asm  memory_copy.asm
qdsp_sim/: __init__.py  assembler.py  cli.py  core.py  devices.py  memory.py  simulator.py
src/dspsim/: __init__.py  assembler.py  bitutil.py  bus.py  cli.py  core.py  core_cycle.py  decoder.py  disassembler.py  encoder.py  fu.py  inst.py  instructions.py  isa.py  logging_setup.py  registers.py  trace.py
src/dspsim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_alu_logic.py  test_functional_core.py  test_instructions.py  test_isa.py
